--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2,10 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    opacity: 0.9;
-    background-color: #ccc;
+    background-color: rgba(204, 204, 204, 0.9);
     position: fixed;
-    z-index: 1;
     bottom: 0;
     top: 0;
     left: 0;
@@ -17,7 +15,6 @@
     border: 0;
     border-radius: 0.2rem;
     width: 50%;
-    z-index: 2;
 }
 
 .modal-header {
